<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <com.hjq.bar.TitleBar
        android:id="@+id/tb_main_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:leftIcon="@null"
        app:title="https://github.com/getActivity/EasyWindow" />

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical">

                <Button
                    android:id="@+id/btn_main_anim"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="15dp"
                    android:text="@string/demo_custom_window_animation" />

                <Button
                    android:id="@+id/btn_main_duration"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="12dp"
                    android:text="@string/demo_custom_window_duration" />

                <Button
                    android:id="@+id/btn_main_overlay"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="12dp"
                    android:text="@string/demo_show_window_with_mask" />

                <Button
                    android:id="@+id/btn_main_lifecycle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="12dp"
                    android:text="@string/demo_monitor_window_lifecycle" />

                <Button
                    android:id="@+id/btn_main_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="12dp"
                    android:text="@string/demo_show_below_view" />

                <Button
                    android:id="@+id/btn_main_input"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="12dp"
                    android:text="@string/demo_soft_keyboard_example" />

                <Button
                    android:id="@+id/btn_main_web"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="12dp"
                    android:text="@string/demo_web_view_example" />

                <Button
                    android:id="@+id/btn_main_list"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="12dp"
                    android:text="@string/demo_recyclerview_example" />

                <Button
                    android:id="@+id/btn_main_draggable"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="12dp"
                    android:text="@string/demo_freely_draggable_window" />

                <Button
                    android:id="@+id/btn_main_global"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="12dp"
                    android:text="@string/demo_global_draggable_window" />

                <Button
                    android:id="@+id/btn_main_semi_stealth"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="12dp"
                    android:text="@string/demo_semi_stealth_window" />

                <Button
                    android:id="@+id/btn_main_cancel_all"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="12dp"
                    android:text="@string/demo_close_and_recycle_all_windows" />

                <Button
                    android:id="@+id/btn_main_toaster_example"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="12dp"
                    android:layout_marginBottom="20dp"
                    android:text="@string/demo_toaster_framework_example" />
            </LinearLayout>

        </FrameLayout>

    </android.support.v4.widget.NestedScrollView>

</LinearLayout>